Corrections when switching clients through SSO (#14)
* Fix: after force-login now all available IDPs are shown
new: CheckRequestedAttributeSetAuthenticator, which enables requestedAttributeSet in SAML-Calls also when changing clients in SSO
Fix: after force-login now all available IDPs are shown

* small fixes and JavaDoc

* added provided scope in several places